--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "generate": "stencil generate"
   },
   "devDependencies": {
-    "@stencil/core": "^1.8.8"
+    "@stencil/core": "^1.8.8",
+    "@types/jest": "^25.1.4"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {}
 }
