--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
   },
   "devDependencies": {
     "@stencil/core": "^1.8.8",
-    "@types/jest": "^25.1.4"
+    "@types/jest": "24.0.25",
+    "@types/puppeteer": "1.20.4",
+    "jest": "24.9.0",
+    "jest-cli": "24.9.0",
+    "puppeteer": "1.20.0"
   },
   "license": "MIT",
   "dependencies": {}
